Agrega platilla Twig para formato 12. Actualizado a Materialize 0.100.2. Otros cambios y arreglos menores.

--- a/res/twig/pages/formats/formato12.twig
+++ b/res/twig/pages/formats/formato12.twig
@@ -1,5 +1,5 @@
 {% extends "base.twig" %}
-{% import "pages/formats/formats_elements.twig" as element %}
+
 {% block content %}
     <blockquote>
         <h1>
@@ -8,251 +8,14 @@
         </h1>
     </blockquote>
     <form role="form" action="formato/12/add/" method="POST">
-        <div class="row">
-            <div class="col s6">
-                <table class="responsive-table highlight">
-                    <caption>
-                        <blockquote>
-                            <p class="header right-align flow-text">
-                                Estudiantes reprobados por sede, turno, carrera y año
-                            </p>
-                        </blockquote>
-                    </caption>
-                    <thead>
-                        <tr>
-                            <th style="width: 20%;"></th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <i class="material-icons left">donut_small</i>
-                                Sede/PED
-                            </td>
-                            <td>
-                                {{ element.input_select_peds('ped_id', rec1.peds.list) }}
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="material-icons left">timelapse</i>
-                                Año Lectivo
-                            </td>
-                            <td>
-                                {{ element.input_select_anio_lectivo('anio_lectivo_value') }}
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="material-icons left">space_bar</i>
-                                Trimestre
-                            </td>
-                            <td>
-                                {{ element.input_select_trimestre('trimestre_value') }}
-                            </td> 
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="col s6">
-                <div class="card-panel hoverable light-green lighten-5">
-                    <i class="material-icons">info</i>
-                    <span class="right-align">
-                        En el cuadro siguiente solo, se deben reflejar los estudiantes reprobados en el trimestre, a fin de que los responsables de carrera o las subdirecciones académicas implementen planes de remediales con los mismos de manera personalizada.
-                    </span>
-                </div>
-                <div class="card hoverable orange lighten-5">
-                    <div class="card-content">
-                        <div class="card-title">
-                            <i class="material-icons">linear_scale</i>
-                            Fórmulas de cálculo
-                        </div>
-                        <p class="right-align">
-                            Para calcular el rendimiento promedio de cada carrera y el rendimiento general por todas ellas, se procederá así:
-                        </p>
-                        <ol>
-                            <li>Se debe tener el rendimiento de cada estudiante</li>
-                            <li>Rendimiento académico por año de cada carrera</li>
-                            <li>Rendimiento promedio por carrera</li>
-                            <li>Rendimiento promedio de todas las carreras</li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% include 'pages/formats/formato12/tables/header_table.twig' %}
         <br>
-        <div class="row">
-            <div class="col s5">
-                <ul class="collapsible" data-collapsible="accordion">
-                    <li>
-                        <div class="collapsible-header">
-                            <i class="material-icons">library_books</i>
-                            Leyendas
-                        </div>
-                        <div class="collapsible-body">
-                            <div class="card-panel hoverable green accent-1">
-                                <ul>
-                                    <li>MF-V = Matrícula final varones</li>
-                                    <li>MF-M = Matrícula final mujeres</li>
-                                    <li>U = Urbano</li>
-                                    <li>R = Rural</li>
-                                    <li>%Rend-V = Rendimiento de varones</li>
-                                    <li>%Rend-M = Rendimiento de mujeres</li>
-                                    <li>%Rend General = Rendimiento general de varones y mujeres</li>
-                                    <li>NVR = ???</li>
-                                    <li>NMR = ???</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col s5">
-                <div class="input-field">
-                    <i class="material-icons prefix" data-length="120">mode_edit</i>
-                    <textarea class="character-counter materialize-textarea validate" data-length="120" required></textarea>
-                    <label>Comentario o nota sobre el formato actual</label>
-                </div>
-            </div>
-            <div class="col s2">
-                <div style="position: relative; height: 70px;">
-                    <div class="fixed-action-btn horizontal" style="z-index: 1; position: absolute; display: inline-block; right: 0;">
-                        <a class="btn-floating btn-large teal waves-effect waves-circle waves-light tooltipped" data-position="top" data-tooltip="Rellenar">
-                            <i class="large material-icons">all_out</i>
-                        </a>
-                        <ul>
-                            <li>
-                                <a class="btn-autofill autofill-clear btn-floating deep-purple lighten-3 tooltipped pulse" data-position="bottom" data-tooltip="Limpiar">
-                                    <i class="material-icons">clear_all</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="btn-autofill autofill-carreras btn-floating blue lighten-3 tooltipped" data-position="bottom" data-tooltip="Añadir carreras">
-                                    <i class="material-icons">directions_run</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="btn-autofill autofill-turnos btn-floating deep-purple accent-1 tooltipped" data-position="bottom" data-tooltip="Añadir Turnos">
-                                    <i class="material-icons">donut_small</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="btn-autofill autofill-anio_carrera btn-floating orange lighten-1 tooltipped" data-position="bottom" data-tooltip="Añadir Años">
-                                    <i class="material-icons">timelapse</i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="divider"></div>
-        <table class="responsive-table bordered highlight" id="table-data">
-            <thead>
-                <tr>
-                    <th rowspan="2" style="width: 20%;">Carrera</th>
-                    <th rowspan="2" style="width: 8%;">Turno</th>
-                    <th rowspan="2" style="width: 8%;">Año</th>
-                    <th colspan="5" class="center-align">Matricula de Varones</th>
-                    <th colspan="5" class="center-align">Matricula de Mujeres</th>
-                    <th rowspan="2"></th>
-                </tr>
-                <tr>
-                    <th>Rurales</th>
-                    <th>Urbanos</th>
-                    <th>MF-V</th>
-                    <th>NVR</th>
-                    <th>% Rep-V</th>
-                    <th>Rurales</th>
-                    <th>Urbanos</th>
-                    <th>MF-M</th>
-                    <th>NMR</th>
-                    <th>% Rep-M</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        {{ element.input_select_carrera('carrera_id[]', rec1.carreras.list) }}
-                    </td>
-                    <td>
-                        {{ element.input_select_turno('turno_id[]', rec1.turnos.list) }}
-                    </td>
-                    <td>
-                        {{ element.input_select_anio_carrera('anio_carrera[]') }}
-                    </td>
-                    <td>
-                        <div class="input-field">
-                            <input name="varones_rurales[]" id="varones_rurales" type="number" class="validate" value=0 required>
-                            <label>R</label>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="input-field">
-                            <input name="varones_urbanos[]" id="varones_urbanos" type="number" class="validate" value=0 required>
-                            <label>U</label>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="input-field">
-                            <input id="MF-V" disabled type="number" value=0>
-                            <label>MF-V</label>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="input-field">
-                            <input id="NVR" type="number" name="nvr[]" class="validate" value=0>
-                            <label>NVR</label>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="input-field">
-                            <input id="per_rep-v" disabled type="number" class="validate" value=0>
-                            <label>% Rep-V</label>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="input-field">
-                            <input name="mujeres_rurales[]" id="mujeres_rurales" type="number" class="validate" value=0 required>
-                            <label>R</label>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="input-field">
-                            <input name="mujeres_urbanos[]" id="mujeres_urbanos" type="number" class="validate" value=0 required>
-                            <label>U</label>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="input-field">
-                            <input id="MF-M" disabled type="number" value=0>
-                            <label>MF-M</label>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="input-field">
-                            <input id="NMR" type="number" name="mmr" class="validate" value=0>
-                            <label>NMR</label>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="input-field">
-                            <input id="per_rep-m" disabled type="number" value=0>
-                            <label>% Rep-M</label>
-                        </div>
-                    </td>
-                    <td>
-                        <a class="tr_clone_add btn-floating blue lighten-3">
-                            <i class="material-icons btn-add">add</i>
-                        </a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        {% include 'pages/formats/formato12/tables/mid_table.twig' %}
+        <br>
+        {% include 'pages/formats/formato12/tables/data_table.twig' %}
         <br>
         <div class="input-field">
-            <button class="btn-large waves-effect waves-light" type="submit" name="action">
+            <button class="btn-large waves-effect waves-light" type="submit">
                 Aceptar
                 <i class="material-icons right">send</i>
             </button>
