--- a/res/twig/pages/formats/carreras.twig
+++ b/res/twig/pages/formats/carreras.twig
@@ -1,4 +1,5 @@
 {% extends "base.twig" %}
+{# TODO Arreglas Modals con nueva version de Materialze #}
 {% block content %}
     <blockquote>
         <h1>
