--- a/res/twig/pages/formats/formato12/help_cards.twig
+++ b/res/twig/pages/formats/formato12/help_cards.twig
@@ -44,8 +44,8 @@
                         <li>%Rend-V = Rendimiento de varones</li>
                         <li>%Rend-M = Rendimiento de mujeres</li>
                         <li>%Rend General = Rendimiento general de varones y mujeres</li>
-                        <li>NVR = ???</li>
-                        <li>NMR = ???</li>
+                        <li>NVR = Número de Varones Reprobados </li>
+                        <li>NMR = Número de Mujeres Reprobadas</li>
                     </ul>
                 </div>
             </div>
