--- a/res/twig/base.twig
+++ b/res/twig/base.twig
@@ -11,6 +11,7 @@
 
             <!-- CSS  -->
             <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+            <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
             <link href="res/libs/materialize/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
             <link href="res/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
