--- a/res/twig/sidebar/sidebar.twig
+++ b/res/twig/sidebar/sidebar.twig
@@ -15,7 +15,7 @@
         </div>
     </li>
     <li>
-        <a href="home">
+        <a href="inicio">
             <i class="material-icons">home</i>
             Inicio
         </a>
