Cambios esteticos a las Cards de la tabla de contenidos. Agregado Formato 12 a la sidebar y a las Cards de contenidos. Otros cambios y arreglos menores.

--- a/res/twig/sidebar/sidebar.twig
+++ b/res/twig/sidebar/sidebar.twig
@@ -12,6 +12,11 @@
                     {{ rec1.user.logged.getFullName }}
                 </span>
             </a>
+            <a href="#!email">
+                <span class="white-text email">
+                    {{ rec1.user.logged.getEmail }}
+                </span>
+            </a>
         </div>
     </li>
     <li>
@@ -47,10 +52,16 @@
     <li>
         <div class="divider"></div>
     </li>
+    <li>
+        <a class="subheader">
+            <i class="material-icons left">assignment_turned_in</i>
+            Formatos
+        </a>
+    </li>
     <li class="no-padding">
         <ul class="collapsible collapsible-accordion">
             <li>
-                <a class="collapsible-header">Complementos<i class="material-icons">arrow_drop_down</i></a>
+                <a class="collapsible-header">Carrreras | Turnos | Peds<i class="material-icons">arrow_drop_down</i></a>
                 <div class="collapsible-body">
                     <ul>
                         <li>
@@ -79,17 +90,18 @@
     <li>
         <div class="divider"></div>
     </li>
-    <li><a class="subheader">Formatos</a></li>
     <li class="no-padding">
         <ul class="collapsible collapsible-accordion">
             <li>
-                <a class="collapsible-header">Formatos<i class="material-icons">arrow_drop_down</i></a>
+                <a class="collapsible-header">Lista de Formatos<i class="material-icons">arrow_drop_down</i></a>
                 <div class="collapsible-body">
                     <ul>
-                        <li><a href="#!">TODO</a></li>
-                        <li><a href="#!">TODO</a></li>
-                        <li><a href="#!">TODO</a></li>
-                        <li><a href="#!">TODO</a></li>
+                        <li>
+                            <a href="formato/12/">
+                                <i class="material-icons left">flare</i>
+                                Formato 12
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </li>
