--- a/res/twig/pages/home.twig
+++ b/res/twig/pages/home.twig
@@ -26,33 +26,36 @@
         </div>
     </div>
     <div class="divider"></div>
-    <h1 class="header">Formatos</h1>
+    <h1 class="header">
+        <i class="material-icons left medium">view_list</i>
+        Lista de Formatos
+    </h1>
     <div class="row">
         <div class="col s3">
-            {{ cards.normal(rec1.page.cards.formato7) }}
+            {{ cards.format(rec1.page.cards.formato7) }}
         </div>
         <div class="col s3">
-            {{ cards.normal(rec1.page.cards.formato8) }}
+            {{ cards.format(rec1.page.cards.formato8) }}
         </div>
         <div class="col s3">
-            {{ cards.normal(rec1.page.cards.formato9) }}
+            {{ cards.format(rec1.page.cards.formato9) }}
         </div>
         <div class="col s3">
-            {{ cards.normal(rec1.page.cards.formato10) }}
+            {{ cards.format(rec1.page.cards.formato10) }}
         </div>
     </div>
     <div class="row">
         <div class="col s3">
-            {{ cards.normal(rec1.page.cards.formato11) }}
+            {{ cards.format(rec1.page.cards.formato11) }}
         </div>
         <div class="col s3">
-            {{ cards.normal(rec1.page.cards.formato12) }}
+            {{ cards.format(rec1.page.cards.formato12) }}
         </div>
         <div class="col s3">
-            {{ cards.normal(rec1.page.cards.formato13) }}
+            {{ cards.format(rec1.page.cards.formato13) }}
         </div>
         <div class="col s3">
-            {{ cards.normal(rec1.page.cards.formato14) }}
+            {{ cards.format(rec1.page.cards.formato14) }}
         </div>
     </div>
 {% endblock %}
